added manual refresh from ST app added new force refresh events service update install files

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,4 @@ ModelManifest.xml
 /ParadoxIpTest/phantomjs.exe
 /ParadoxIpTest/chromedriver.exe
 /ParadoxIp/phantomjs.exe
+/Paradox.WinService/Install/InstallUtil.InstallLog
