--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,4 @@ ModelManifest.xml
 /ParadoxIpTest/chromedriver.exe
 /ParadoxIp/phantomjs.exe
 /Paradox.WinService/Install/InstallUtil.InstallLog
+/Paradox.WinService/phantomjs.exe
