--- a/Paradox.WinService/packages.config
+++ b/Paradox.WinService/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PhantomJS" version="2.0.0" targetFramework="net45" />
   <package id="ServiceStack" version="4.0.42" targetFramework="net45" />
   <package id="ServiceStack.Client" version="4.0.42" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.42" targetFramework="net45" />
