--- a/ParadoxIpTest/packages.config
+++ b/ParadoxIpTest/packages.config
@@ -3,6 +3,7 @@
   <package id="FluentAssertions" version="3.4.1" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="PhantomJS" version="2.0.0" targetFramework="net45" />
   <package id="Selenium.Support" version="2.45.0" targetFramework="net451" />
   <package id="Selenium.WebDriver" version="2.45.0" targetFramework="net451" />
   <package id="Selenium.WebDriver.PhantomJS.Xplatform" version="2.45.0.1" targetFramework="net451" />
