- major refactor, splitting out smartthings to it's own assembly and servicestack plugin. This allows not loading ST integration. Thus allowing someone not to need a SS license to just use the basic services for the paradox module. This is just the frist crack at it - may change in the future - changed the gloabal headers - removed several unnecessary services - will update the ST apps in next commit - changes service endpoint urls to be more organized

--- a/Paradox.Mono.Daemon/App.config.sample
+++ b/Paradox.Mono.Daemon/App.config.sample
@@ -8,6 +8,8 @@
     <add key="moduleIp" value="http://192.168.1.199"/>
     <add key="panelCode" value=""/>
     <add key="password" value=""/>
+    <add key="runMailServer" value="false"/>
+    <add key="enableSmartThings" value="true"/>
     <add key="servicestack:license" value=""/>
 
   </appSettings>
