--- a/Paradox.WebServices/Paradox.WebServices.csproj
+++ b/Paradox.WebServices/Paradox.WebServices.csproj
@@ -78,9 +78,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ParadoxService.cs" />
     <Compile Include="Services\ServiceStartup.cs" />
-    <Compile Include="Services\SmartThingsCallbacks.cs" />
-    <Compile Include="Services\SmartThingsService.cs" />
-    <Compile Include="Settings\SmartThingsSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="NLog.config">
@@ -92,6 +89,10 @@
     <ProjectReference Include="..\Paradox.WebServices.ServiceModel\Paradox.WebServices.ServiceModel.csproj">
       <Project>{75533b60-3776-48b5-a902-59cd90a10330}</Project>
       <Name>Paradox.WebServices.ServiceModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Paradox.WebServices.SmartThings\Paradox.WebServices.SmartThings.csproj">
+      <Project>{197C206D-6030-4C05-86E1-2291BF6C4A44}</Project>
+      <Name>Paradox.WebServices.SmartThings</Name>
     </ProjectReference>
     <ProjectReference Include="..\ParadoxIp\ParadoxIp.csproj">
       <Project>{c3c19bed-60f3-4635-88ca-b3fe1dfa60c0}</Project>
