--- a/Paradox.WebServices.ServiceModel.SmartThings/Paradox.WebServices.ServiceModel.SmartThings.csproj
+++ b/Paradox.WebServices.ServiceModel.SmartThings/Paradox.WebServices.ServiceModel.SmartThings.csproj
@@ -1,18 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75533B60-3776-48B5-A902-59CD90A10330}</ProjectGuid>
+    <ProjectGuid>{7C121D22-DF97-4030-93E3-B15163FA14A5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Paradox.WebServices.ServiceModel</RootNamespace>
-    <AssemblyName>Paradox.WebServices.ServiceModel</AssemblyName>
+    <RootNamespace>Paradox.WebServices.ServiceModel.SmartThings</RootNamespace>
+    <AssemblyName>Paradox.WebServices.ServiceModel.SmartThings</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,14 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ServiceStack.Common">
+    <Reference Include="ServiceStack.Common, Version=4.0.42.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Common.4.0.42\lib\net40\ServiceStack.Common.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="ServiceStack.Interfaces">
+    <Reference Include="ServiceStack.Interfaces, Version=4.0.0.0, Culture=neutral, PublicKeyToken=e06fbc6124f57c43, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Interfaces.4.0.42\lib\portable-wp80+sl5+net40+win8+monotouch+monoandroid+xamarin.ios10\ServiceStack.Interfaces.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="ServiceStack.Text">
+    <Reference Include="ServiceStack.Text, Version=4.0.42.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Text.4.0.42\lib\net40\ServiceStack.Text.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,36 +49,22 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Device.cs" />
-    <Compile Include="Model\Partition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request\AlarmDeviceListRequest.cs" />
-    <Compile Include="Request\AlarmInformationRequest.cs" />
-    <Compile Include="Request\AlarmPartitionListRequest.cs" />
-    <Compile Include="ArmingMode.cs" />
-    <Compile Include="Request\ForceFullStatusUpdateRequest.cs" />
-    <Compile Include="Request\PartitionSetModeRequest.cs" />
-    <Compile Include="Request\PartitionStatusRequest.cs" />
-    <Compile Include="Request\ZoneStatusRequest.cs" />
-    <Compile Include="Response\AlarmDeviceListResponse.cs" />
-    <Compile Include="Response\AlarmInformationResponse.cs" />
-    <Compile Include="Response\AlarmPartitionListResponse.cs" />
-    <Compile Include="Response\ParadoxBaseResponse.cs" />
+    <Compile Include="Request\SmartThingsSettingsRequest.cs" />
+    <Compile Include="Request\SmartThingsSettingsResetRequest.cs" />
+    <Compile Include="Request\SmartThingsStatusRequest.cs" />
+    <Compile Include="Request\StatusRequest.cs" />
+    <Compile Include="Response\SmartThingsStatusResponse.cs" />
+    <Compile Include="Response\StatusResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
