--- a/ParadoxIp/ParadoxIp.csproj
+++ b/ParadoxIp/ParadoxIp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Enum\IpModuleType.cs" />
     <Compile Include="Events\DeviceUpdateEventArgs.cs" />
     <Compile Include="Events\PartitionUpdateEventArgs.cs" />
+    <Compile Include="IParadoxEventCallbacks.cs" />
     <Compile Include="Model\Device.cs" />
     <Compile Include="Model\IpModule.cs" />
     <Compile Include="Managers\IpModuleManager.cs" />
