Issue 12 - added new MQTT publisher. Note - currently can't use both ST and MQTT at the same time (issue 7) - removed c#6 compiler mods as mono doesn't like them. -updated packages - changed callback return type on IParadoxEventCallbacks

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ ModelManifest.xml
 /ParadoxIp/phantomjs.exe
 /Paradox.WinService/Install/InstallUtil.InstallLog
 /Paradox.WinService/phantomjs.exe
+/ParadoxItems.txt
+/.vs/config
