--- a/Paradox.WebServices/NLog.config
+++ b/Paradox.WebServices/NLog.config
@@ -1,9 +1,11 @@
 ﻿<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
     <target name="logfile" xsi:type="File" fileName="Paradox.log" />
+    <target name="debugger" xsi:type="Debugger" layout="${logger}::${message}"/>
   </targets>
 
   <rules>
     <logger name="*" minlevel="Trace" writeTo="logfile" />
+    <logger name="*" minlevel="Trace" writeTo="debugger" />
   </rules>
 </nlog>
