--- a/Paradox.MQTT/packages.config
+++ b/Paradox.MQTT/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PhantomJS" version="2.0.0" targetFramework="net45" />
+  <package id="M2Mqtt" version="4.3.0.0" targetFramework="net45" />
   <package id="ServiceStack" version="4.0.52" targetFramework="net45" />
   <package id="ServiceStack.Client" version="4.0.52" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.52" targetFramework="net45" />
   <package id="ServiceStack.Interfaces" version="4.0.52" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.52" targetFramework="net45" />
+  <package id="SettingsProviderNet" version="2.1.1" targetFramework="net45" />
 </packages>
