--- a/Paradox.WinService/Paradox.WinService.csproj
+++ b/Paradox.WinService/Paradox.WinService.csproj
@@ -97,10 +97,6 @@
     <EmbeddedResource Include="WinServiceInstaller.resx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Paradox.WebServices.SmartThings\Paradox.WebServices.SmartThings.csproj">
-      <Project>{197c206d-6030-4c05-86e1-2291bf6c4a44}</Project>
-      <Name>Paradox.WebServices.SmartThings</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Paradox.WebServices\Paradox.WebServices.csproj">
       <Project>{c1bfbe4b-2125-49d4-84b7-e6cbec92ca42}</Project>
       <Name>Paradox.WebServices</Name>
@@ -111,16 +107,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\packages\PhantomJS.2.0.0\tools\phantomjs\phantomjs.exe">
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\packages\PhantomJS.2.1.1\tools\phantomjs\phantomjs.exe">
       <Link>phantomjs.exe</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="phantomjs-license.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
